# webbuf

./: AGENTS.md  Cargo.toml  LICENSE  README.md  base64-js.js  biome.json  buffer.d.ts  buffer.js  ieee754.d.ts  ieee754.js  index.d.ts  index.js  index.test.ts  package.json  pnpm-lock.yaml  webbuf.test.ts  webbuf.ts
issues/: README.md
issues/0008-astro-website/: 01-scaffold-and-theming.md  02-image-pipeline.md  03-eslint-and-foundation.md  04-content-landing-and-docs.md  05-final-verification.md  06-api-extraction.md  07-render-full-api.md  08-usage-and-close.md  README.md
rs/: Cargo.toml
rs/src/: lib.rs
rs/webbuf_aescbc/: Cargo.toml
rs/webbuf_aescbc/src/: aes.rs  aescbc.rs  lib.rs
rs/webbuf_blake3/: Cargo.toml
rs/webbuf_ripemd160/: Cargo.toml
rs/webbuf_ripemd160/src/: lib.rs
rs/webbuf_secp256k1/: Cargo.toml
src/: fixedbuf.ts  index.ts  webbuf.ts
test/: fixedbuf.test.ts  index.test.ts  webbuf.test.ts
ts/: .prettierignore  biome.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.benchmark.config.ts  vitest.config.js
ts/benchmark/: webbuf.benchmark.ts
ts/npm-webbuf/: package.json
ts/npm-webbuf-acb3/: package.json
ts/npm-webbuf-acb3dh/: package.json
ts/npm-webbuf-aescbc/: package.json
ts/npm-webbuf-blake3/: package.json
ts/npm-webbuf-fixedbuf/: package.json
ts/npm-webbuf-numbers/: package.json
ts/npm-webbuf-ripemd160/: build-inline-wasm.ts  package.json
ts/npm-webbuf-rw/: package.json
ts/npm-webbuf-secp256k1/: package.json
ts/npm-webbuf-webbuf/: package.json
ts/src/: fixedbuf.ts  (+3 more)
(+85 files in other folders)
