[package]
name = "webbuf_aescbc"
description = "WebBuf AES-CBC library"
version = "0.8.0"
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com> (https://ryanxcharles.com)"]
repository = "https://github.com/earthbucks/earthbucks"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
aes = "0.8.4"

[dev-dependencies]
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
