[package]
name = "webbuf_ripemd160"
description = "Ripemd160 hash function for WebBuf with optional support for WASM."
version.workspace = true
edition = "2021"
license = "MIT"
authors = ["Ryan X. Charles <ryan@ryanxcharles.com>"]
repository = "https://github.com/earthbucks/earthbucks"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["wasm-bindgen"]

[dependencies]
ripemd = "0.1.3"
hex = "0.4.3"

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
